# Realtime-mlops-project

./: .gitignore  main.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: mlops-pipeline.yaml
k8s/: inference.yaml  svcaccount.yaml
