[project]
name = "realtime-mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "dvc>=3.38.0",
    "dvc-s3>=3.0.0",
    "fastapi>=0.109.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.5.0",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.27.0",
]
